k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiz-app
spec:
  replicas: 2  # create two pods for my app, should be dispersed into both availability zones
  selector:
    matchLabels:
      app: wiz-app # tells the deployment to manage any pod that has the wiz-app label 
  template:
    metadata:
      labels:
        app: wiz-app # required to specifiy the label for matchLabels
    spec:
      serviceAccountName: wiz-service-account # service account created in rbac.yaml
      containers:
        - name: wiz-app
          image: 795176247566.dkr.ecr.us-east-1.amazonaws.com/wiz-ecr-repo:latest # image uploaded to ECR w/ app code
          ports: # declaration that the container is listening on the pod's port 8080
            - containerPort: 8080
